@@ -3944,6 +3944,8 @@ clipboard_from_file             eg '~/copy-file-contents-to-clipboard.txt'
 clipboard_primary_from_file     eg '~/copy-file-contents-to-clipboard.txt'
 clipboard_copy_files            FILE ...  Files copied to clipboard
 clipboard_cut_files             FILE ...  Files cut to clipboard
+edit_file                       FILE        Open FILE in user's text editor
+run_in_terminal                 COMMAND...  Run COMMAND in user's terminal
 
 <a name="socket-tprops"><a href="#socket-tprops">TASK PROPERTIES</a></a>
 ---------------
