@@ -2458,7 +2458,7 @@ void read_root_settings()
 
 void write_src_functions( FILE* file )
 {
-    fputs( "\nfm_randhex4()  # generate a four digit random hex number\n{\n    fm_rand1=$RANDOM\n    fm_rand2=$RANDOM\n    (( fm_rand = fm_rand1 + fm_rand2 ))\n    let \"fm_rand \%= 65536\"\n    fm_randhex=`printf \"\%04X\" $fm_rand | tr A-Z a-z`\n    if [ \"$fm_randhex\" = \"\" ]; then\n        fm_randhex=$RANDOM  # failsafe\n    fi\n}\n\nfm_new_tmp()\n{\n    fm_randhex4\n    fm_tmp1=\"$fm_tmp_dir/$$-$fm_randhex.tmp\"\n    fm_count1=0\n    while ! mkdir \"$fm_tmp1\" 2>/dev/null; do\n        fm_randhex4\n        fm_tmp1=\"$fm_tmp_dir/$$-$fm_randhex.tmp\"\n        if (( fm_count1++ > 1000 )); then\n            echo 'spacefm: error creating temporary directory' 1>&2\n			unset fm_tmp1 fm_randhex fm_count1\n            echo \"\"\n            return 1\n        fi\n    done\n    echo \"$fm_tmp1\"\n    unset fm_tmp1 fm_randhex fm_count1\n}\n\nfm_edit()\n{\n    [[ -z \"$fm_editor\" ]] && return 1\n    [[ -z \"$1\" ]] && return 1\n    fm_edit_cmd=\"$fm_editor\"\n    fm_a=\"'\"\n    fm_edit_arg=\"'${1//\\'/$fm_a\\\\$fm_a$fm_a}'\"\n    fm_edit_cmd=\"${fm_edit_cmd//%f/$fm_edit_arg}\"\n    [[ \"$fm_edit_cmd\" == \"$fm_editor\" ]] && fm_edit_cmd=\"${fm_edit_cmd//%F/$fm_edit_arg}\"\n    [[ \"$fm_edit_cmd\" == \"$fm_editor\" ]] && fm_edit_cmd=\"${fm_edit_cmd//%u/$fm_edit_arg}\"\n    [[ \"$fm_edit_cmd\" == \"$fm_editor\" ]] && fm_edit_cmd=\"${fm_edit_cmd//%U/$fm_edit_arg}\"\n    if [ \"$fm_edit_cmd\" == \"$fm_editor\" ]; then\n        $fm_editor \"$1\"\n    else\n        eval \"$fm_edit_cmd\"\n    fi\n    fm_edit_err=$?\n    unset fm_edit_cmd fm_a fm_edit_arg\n    return $fm_edit_err\n}\n\n", file );
+    fputs( "\nfm_randhex4()  # generate a four digit random hex number\n{\n    fm_rand1=$RANDOM\n    fm_rand2=$RANDOM\n    (( fm_rand = fm_rand1 + fm_rand2 ))\n    let \"fm_rand \%= 65536\"\n    fm_randhex=`printf \"\%04X\" $fm_rand | tr A-Z a-z`\n    if [ \"$fm_randhex\" = \"\" ]; then\n        fm_randhex=$RANDOM  # failsafe\n    fi\n}\n\nfm_new_tmp()\n{\n    fm_randhex4\n    fm_tmp1=\"$fm_tmp_dir/$$-$fm_randhex.tmp\"\n    fm_count1=0\n    while ! mkdir \"$fm_tmp1\" 2>/dev/null; do\n        fm_randhex4\n        fm_tmp1=\"$fm_tmp_dir/$$-$fm_randhex.tmp\"\n        if (( fm_count1++ > 1000 )); then\n            echo 'spacefm: error creating temporary directory' 1>&2\n			unset fm_tmp1 fm_randhex fm_count1\n            echo \"\"\n            return 1\n        fi\n    done\n    echo \"$fm_tmp1\"\n    unset fm_tmp1 fm_randhex fm_count1\n}\n\nfm_edit()\n{\n    spacefm -s set edit_file \"$1\"\n}\n\n", file );
 }
 
 GtkWidget* xset_get_image( const char* icon, int icon_size )
