@@ -12,6 +12,7 @@
     Dialog --chooser --save DIR opens in DIR
     [gtk3] Dialog label wrap min width closes BwackNinja issue #25
     Dialog send stdout of external commands to /dev/null
+    socket add props edit_file and run_in_terminal
 0.8.3   2012-11-24:
     added --socket-cmd #142
     added View|Events menu
